# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py  0002_rename_full_name_user_first_name_user_last_name.py  0003_user_password_alter_user_first_name_and_more.py  0004_alter_user_options_alter_user_managers_and_more.py  0005_delete_user.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_labeltotask_task_labels.py  0003_rename_tasks_labeltotask_task.py
task_manager/templates/: base.html  delete.html  index.html  login.html  update.html  users.html
task_manager/templates/labels/: create.html  delete.html  labels.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/templates/tasks/: create.html  delete.html  task_detail.html  tasks.html  update.html
task_manager/templates/users/: create.html  delete.html  update.html  users.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+1 files in other folders)
