[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksei Seleznev <ferfa2@rambler.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
gunicorn = "^20.1.0"
dj-database-url = "^1.2.0"
python-dotenv = "^0.21.1"
whitenoise = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
